[gd_scene load_steps=6 format=3 uid="uid://ca5olpmsm6fxc"]

[ext_resource type="Texture2D" uid="uid://jcgl4llv1nio" path="res://Assets/Bosses/FireyDeek.png" id="1_ex2uk"]
[ext_resource type="Texture2D" uid="uid://dphhx5ogt4k7o" path="res://Assets/player/player_shadow.png" id="1_ji7il"]
[ext_resource type="Script" path="res://scripts/deek/firey_deek.gd" id="1_v6wdn"]
[ext_resource type="Script" path="res://scripts/health_component/health_component.gd" id="4_8r8kh"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_23c2q"]
radius = 3.0
height = 12.0

[node name="Deek" type="CharacterBody2D"]
script = ExtResource("1_v6wdn")
max_speed = 50.0
accel = 80.0
decel = 120.0

[node name="Shadow" type="Sprite2D" parent="."]
position = Vector2(0, -5)
texture = ExtResource("1_ji7il")

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite2D" parent="Body"]
position = Vector2(0, -15)
texture = ExtResource("1_ex2uk")

[node name="Minkar" type="Marker2D" parent="Body"]
unique_name_in_owner = true
position = Vector2(-9, -21)

[node name="Health" type="Node" parent="." node_paths=PackedStringArray("actor")]
script = ExtResource("4_8r8kh")
max_health = 80
actor = NodePath("..")

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_23c2q")

[node name="ThinkingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.0
one_shot = true

[node name="ShootingTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0

[connection signal="timeout" from="ThinkingTimer" to="." method="_on_thinking_timer_timeout"]
[connection signal="timeout" from="ShootingTimer" to="." method="shoot_firey_ball"]
